# Chat

./: .dockerignore  .gitattributes  .gitignore  AIService.cpp  AIService.h  Authentication.cpp  Authentication.h  CMakeLists.txt  ChatRecordsManager.cpp  ChatRecordsManager.h  ChatServer.vcxproj  ChatServer.vcxproj.filters  ConnectionManager.cpp  ConnectionManager.h  Container.cpp  Container.h  CorsMiddleware.h  DatabaseManager.cpp  DatabaseManager.h  DebugRoute.cpp  DebugRoute.h  Dockerfile  Dockerfile.local  EchoController.cpp  HttpClient.cpp  HttpClient.h  MsgDispatcher.cpp  MsgDispatcher.h  PublicChatController.cpp  PublicChatController.h  README.md  RelationshipController.cpp  RelationshipController.h  RelationshipService.cpp  RelationshipService.h  ThreadSafetyAnalysis.md  User.cpp  User.h  UserController.cpp  UserController.h  (+18 more)
Auth/: Authentication.cpp  Authentication.h  DebugRoute.cpp
Common/: AIMessage.cpp  AIMessage.h  AIRequestMsg.cpp  AIRequestMsg.h  ChatMessage.cpp  ChatMessage.h  ChatThread.cpp  ChatThread.h  ConnectionContext.h  Convert.h  Enums.h  HeartbeatConfig.h  Notice.cpp  Notice.h  OutboundMessage.cpp  OutboundMessage.h  ResponseHelper.h  User.cpp  User.h  WebMessageCodec.cpp  WebMessageCodec.h  WsResponseHelper.h
DTOs/: ChatRecordDTO.cpp  ChatRecordDTO.h  MessageDTO.cpp  MessageDTO.h  NotificationDTO.cpp  NotificationDTO.h  RelationshipDTO.cpp  RelationshipDTO.h
Data/: DbAccessor.h  IDbInitializer.h  IMessageRepository.h  IRelationshipRepository.h  IThreadRepository.h  IUserRepository.h  PostgreSQLInitializer.cpp  PostgreSQLInitializer.h  PostgresMessageRepository.cpp  PostgresMessageRepository.h  PostgresRelationshipRepository.cpp  PostgresRelationshipRepository.h  PostgresThreadRepository.cpp  PostgresThreadRepository.h  PostgresUserRepository.cpp  PostgresUserRepository.h  SQLiteInitializer.cpp  SQLiteInitializer.h  SQLiteMessageRepository.cpp  SQLiteMessageRepository.h  SQLiteRelationshipRepository.cpp  SQLiteRelationshipRepository.h  SQLiteThreadRepository.cpp  SQLiteThreadRepository.h  SQLiteUserRepository.cpp  SQLiteUserRepository.h
MiddleWare/: CorsMiddleware.cpp
Service/: ConnectionService.cpp  ConnectionService.h  FileService.cpp  FileService.h  MessageService.cpp  MessageService.h  RedisService.cpp  RedisService.h  RelationshipService.cpp  RelationshipService.h  ThreadService.cpp  ThreadService.h  UserService.cpp  UserService.h
auth/: AccountValidator.cpp  AccountValidator.h  PasswordService.cpp  PasswordService.h  SecretProvider.cpp  SecretProvider.h  TokenConstants.h  TokenFactory.cpp  TokenFactory.h  TokenService.cpp  TokenService.h
controllers/: AIController.cpp  AIController.h  Authentication.cpp  Authentication.h  ChatController.cpp  ChatController.h  DebugRoute.cpp  DebugRoute.h  EchoController.cpp  EchoController.h  FileController.cpp  FileController.h  PublicChatController.cpp  RelationshipController.cpp  RelationshipController.h  ThreadController.cpp  ThreadController.h  UserController.cpp  UserController.h
deploy-output/: config.json  docker-compose.yml
docs/: README.md  _sidebar.md  index.html  user-api-v2.md
docs/ExistingProblems/: backendProblems.md  frontendProblems.md
docs/api/: debug.md  user.md  websocket.md
docs/docs/: README.md
filter/: TokenVerifyFilter.cpp  TokenVerifyFilter.h
manager/: ConnectionManager.cpp  ConnectionManager.h  DatabaseManager.cpp  DatabaseManager.h  FileManager.cpp  FileManager.h  MessageManager.cpp  MessageManager.h  NotificationManager.cpp  NotificationManager.h  SendManager.cpp  SendManager.h  ThreadManager.cpp  ThreadManager.h  text.txt
middleware/: CORSMiddleware.h  CorsMiddleware.cpp  CorsMiddleware.h  FormatChecker.cpp  FormatChecker.h  cors.h
models/: AiChats.cc  AiChats.h  AiContext.cc  AiContext.h  Block.cc  Block.h  ChatRecords.cc  ChatRecords.h  FriendRequests.cc  FriendRequests.h  Friendships.cc  Friendships.h  GroupChats.cc  GroupChats.h  GroupMembers.cc  GroupMembers.h  Groups.cc  Groups.h  Messages.cc  Messages.h  Notifications.cc  Notifications.h  PrivateChats.cc  PrivateChats.h  RelationshipEvent.cc  RelationshipEvent.h  Relationships.cc  Relationships.h  Threads.cc  Threads.h  Users.cc  Users.h  model.json
static/: cors_test.html  db_info.html  index.html  online_users.html
test/: CMakeLists.txt  api_test.py  test_notification_crash.py
test/load/: README.md  benchmark_locustfile.py  failed_accounts.txt  locustfile.py  optimized.html  optimized_stats.csv  optimized_stats_history.csv  requirements.txt  start_load_test.ps1  user_pool.py  warm_up.py  ws_locustfile.py
